solved teh overflowing issue

--- a/Movie-Rating/src/app/home/home.component.css
+++ b/Movie-Rating/src/app/home/home.component.css
@@ -52,6 +52,7 @@
     width: 80%;
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
 
     .bollywood-movies {
       position: relative;
@@ -76,13 +77,18 @@
         padding-top: 10px;
         display: flex;
         justify-content: space-between;
+        padding: 2rem;
 
         .cover img {
           border-radius: 5px;
           width: 150px;
           height: 200px;
-          object-fit: cover;
-          margin-right: 15px;
+          margin-right: 40px;
+        }
+        .movie-details{
+          .name{
+            padding-right: 20px;
+          }
         }
       }
     }
